--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ li {
 }
 
 @font-face {
+    font-family: FontAwesome;
+    src: url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
+}
+
+@font-face {
     font-family: Montserrat;
     /* Гарнитура шрифта */
     src: url("/fonts/MontserratRegular.ttf");
@@ -30,6 +35,13 @@ li {
     font-family: Raleway;
     /* Гарнитура шрифта */
     src: url("/fonts/RalewayRegular.ttf");
+    /* Путь к файлу со шрифтом */
+}
+
+@font-face {
+    font-family: Raleway-medium;
+    /* Гарнитура шрифта */
+    src: url("/fonts/RalewayMedium.ttf");
     /* Путь к файлу со шрифтом */
 }
 
@@ -99,8 +111,14 @@ li {
     margin-top: 200px;
 }
 
-.about {
+.about,
+.service,
+.team_speak {
     background-color: #f8fafa;
+}
+
+.contact_us {
+    background-image: url("/img/bg.png");
 }
 
 .title {
@@ -127,9 +145,10 @@ li {
     font-weight: bold;
     font-size: 20px;
     text-transform: uppercase;
-    color: #646565;
+    color: #424242d6;
     padding-top: 15px;
     padding-bottom: 15px;
+    letter-spacing: 1px;
 
 }
 
@@ -139,25 +158,270 @@ li {
     color: #505050bb;
 }
 
-
-.wrap-image {
+.wrap-image img {
     display: table-cell;
     vertical-align: middle;
+    object-fit: cover;
+
+
+}
+
+.works .wrap-image {
+
     width: 350px;
     height: 350px;
     padding: 15px;
+    display: table-cell;
+    vertical-align: middle;
+    object-fit: cover;
+
 }
-.wrap-image img{
+
+.service_text {
+    color: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    top: 186px;
+    left: 77px;
+    right: 97px;
+}
+
+.service_text h3 {
+    font-family: Merryweather-Bold;
+    font-weight: bold;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.service_text p {
+    font-family: Raleway;
+    font-size: 17px;
+}
+
+.service_text span {
+    font-family: Raleway-Medium;
+    font-size: 17px;
+    text-transform: uppercase;
+    letter-spacing: 1pt;
+}
+
+.service_item {
+    position: relative;
+    padding: 7.5px;
+
+}
+
+.service_image {
+    background-color: black;
+}
+
+.service_item img {
+    max-width: 100%;
+    height: 420px;
+    object-fit: cover;
+    opacity: 0.4;
+
+}
+
+.service_active h3 {
+    color: #132927;
+    padding-bottom: 40px;
+}
+
+.service_active p {
+    padding-bottom: 40px;
+    color: #1329277c;
+}
+
+.service_active span {
+
+    color: #1329277c;
+}
+
+.service_active img {
+    opacity: 0.03;
+}
+
+.service_active .service_text {
+    position: absolute;
+    top: 65px;
+    left: 65px;
+    right: 116px;
+
+}
+
+.service_active .service_image {
+   
+}
+
+.wrap-image img {
     height: inherit;
     width: inherit;
     object-fit: cover;
 }
-.foter {
-    background: #ffffff;
-    padding-bottom: 30px;
+
+.qoute_wrap {
+    position: absolute;
+
 }
+
+.quote_text {
+    position: absolute;
+    top: 230px;
+    left: 70px;
+    width: 250px;
+    z-index: 1;
+}
+
+.quote_text h3 span {
+    font-size: 15px;
+    text-transform: none;
+    font-style: italic;
+    color: #76797881;
+
+}
+
+.quote_text h3 {
+    color: #2c3a39;
+    font-size: 20px;
+
+}
+
+.quote_text .icons {
+    color: #2c3a39;
+}
+
+.quote_img {
+    position: absolute;
+    top: 190px;
+    margin-left: 50px;
+}
+
+.quote_img img {
+    width: 90%;
+}
+
+.team .wrap-image {
+    display: table-cell;
+    vertical-align: middle;
+    width: 350px;
+    height: 440px;
+    padding: 15px;
+}
+
+.icons {
+
+    font-family: FontAwesome !important;
+}
+
+
+
+.footer {
+    background: #262b2e;
+    padding-bottom: 300px;
+}
+
+
 
 .footer_item img {
     padding-top: 40px;
     padding-left: 10px;
+}
+
+.false_carusel_bg {
+    background-color: #eff0f2;
+    height: 410px;
+    width: 480px;
+}
+
+.false_carusel_img {
+    position: absolute;
+    background-color: white;
+    height: 480px;
+    width: 430px;
+    display: table-cell;
+    vertical-align: middle;
+    top: -36px;
+    left: 43px;
+}
+
+.false_carusel_img img {
+    height: inherit;
+    width: inherit;
+    object-fit: cover;
+}
+
+.false_carusel_prg {
+    position: absolute;
+    z-index: 1;
+    top: 490px;
+    left: 240px;
+}
+
+.about_p {
+    padding-bottom: 230px;
+}
+
+.glass {
+    position: absolute;
+    top: 280px;
+}
+
+.false_carusel_card {
+    background-color: #eff0f2;
+    height: 410px;
+    width: 680px;
+    margin-left: 100px;
+}
+
+.team_speak {
+    padding-bottom: 300px;
+}
+
+.partners {
+    padding-top: 100px;
+    padding-bottom: 20px;
+}
+
+.false_carusel_button_box {
+    position: absolute;
+    height: 50px;
+    width: 140px;
+    top: 440px;
+    right: -130px;
+
+}
+.bg-cian{
+    background-color: #71f6eb;
+}
+.false_carusel_button_box button{
+    width: 53px;
+    height: 53px;
+    border: 0 ;
+    border-radius: 4px;
+    box-shadow:3px 5px 6px #50505025;
+}
+.card_text{
+    width: 504px;
+    top:100px;
+    left: 200px;
+    position: absolute;
+}
+.star_icon{
+    padding-top: 34px;
+    color: yellow!important;
+}
+.contact_us{
+    padding-top: 210px;
+    padding-bottom: 120px;
+}
+.contact_us .col-md-6{
+    background-color: #021623b0;
+}
+.contact_us button{
+    width: 53px;
+    height: 53px;
+    border: 0 ;
+    border-radius: 4px;
+    
 }
